[package]
name = "coocon"
version = "1.0.0"
edition = "2021"
description = "Secure sandbox for untrusted code"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
ctrlc = "3.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libseccomp = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading"
] }

[profile.release]
opt-level = 3
lto = false
strip = true

[[bin]]
name = "coocon"
path = "src/main.rs"
